various spacing fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -199,7 +199,7 @@ p {
   ol + h3,
   ul + h2,
   ul + h3 {
-    margin-top: 3rem;
+    margin-top: 1rem;
   }
 
   code {
